centered dicom and seperated data from input

--- a/LaTeX/BA.tex
+++ b/LaTeX/BA.tex
@@ -217,6 +217,9 @@ Datum, Ort, \hfill Unterschrift \hfill
 	\textbf{MRI} \> Magnetic Resonance Imaging\\
     \textbf{RF} \> Radio Frequency\\
     \textbf{PACS} \> Picture Archiving and Communication System\\
+    \textbf{SRS} \> Stereotactic radiosurgery\\
+    \textbf{GTV} \> Gross tumor volume\\
+    \textbf{OAR} \> Organs at risk\\
 \end{tabbing}
 
 \newpage
