--- a/LaTeX/State_of_the_art.tex
+++ b/LaTeX/State_of_the_art.tex
@@ -13,13 +13,17 @@ Many scan machines today are connected to a Picture Archiving and Communication 
 When searching for a DICOM viewer online, one will find a plethora of options. They range from simple viewers which just display the image to high class applications useful for teaching, research and even as mini-PACS. Still, there is no piece of software that does it all. Most Viewers specialize as the enquiry for them is constantly evolving.
 \cite{varmaFreeDICOMBrowsers2008}
 
-\section{Image labeling  and editing Software}
-\label{Image labeling and editing Software}
+
+\section{Image labelling  and editing Software}
+\label{Image labelling and editing Software}
 Editing software can be quite expensive. Depending on the functionality and features provieded prices change. One of the best and wellknown photo editing software being Adobe's Photoshop. After importing an image as DICOM, jpeg, png etc. pretty much all alterations imaginable can be made. Just like with the viewing software, there are lots of free options downloadable from the internet. Most of these however, only give selected options for editing.
 A very common edit, useful for teaching or specification in publlications, is the use of red arrows. These can even be added in Powerpoint or Paint.
 
 \subsection{Segmentation}
 \label{Segmentation}
+Segmentation, which can also be reffered to as automatic contouring "involves the identification and labelling of ROI from an image."
+ \cite[p.139]{lineyMRIRadiotherapyPlanning2019}
 In IGRT segmentation of a tumor is one of the crucial parts of planning a radiation session. A to small segmentation could leave vital parts of the tumor and therefore be less effective, while a segmentation that is to large will hurt the surrounding tissue.
-As an approach to help optimize the segmentation process semi-autumatic as well as fully automated selection tools have appeard.
+As an approach to help optimize the segmentation process semi-automatic as well as fully automated selection tools have appeard.
 \cite{heckelSketchBasedEditingTools2013}
+Although the accuracy of those tools is getting better, doctors still have to check the segmentations made by an algorithm because biological variability as well as low contrast and noise can lead to the algorithm making inaccurate selections.
