--- a/LaTeX/Literature.bib
+++ b/LaTeX/Literature.bib
@@ -37,6 +37,24 @@
   file = {/Users/Heni/Zotero/storage/FXY95W8F/Biederer et al. - 2012 - MRI of the lung (23). Why … when … how.pdf;/Users/Heni/Zotero/storage/L9MKN75M/s13244-011-0146-8.html}
 }
 
+@article{bunckMagneticResonance4D2012a,
+  title = {Magnetic Resonance {{4D}} Flow Analysis of Cerebrospinal Fluid Dynamics in {{Chiari I}} Malformation with and without Syringomyelia},
+  author = {Bunck, Alexander C. and Kroeger, Jan Robert and Juettner, Alena and Brentrup, Angela and Fiedler, Barbara and Crelier, Gerard R. and Martin, Bryn A. and Heindel, Walter and Maintz, David and Schwindt, Wolfram and Niederstadt, Thomas},
+  date = {2012-09-01},
+  journaltitle = {European Radiology},
+  shortjournal = {Eur Radiol},
+  volume = {22},
+  number = {9},
+  pages = {1860--1870},
+  issn = {1432-1084},
+  doi = {10.1007/s00330-012-2457-7},
+  url = {https://doi.org/10.1007/s00330-012-2457-7},
+  urldate = {2021-08-18},
+  abstract = {To analyse cerebrospinal fluid (CSF) hydrodynamics in patients with Chiari type I malformation (CM) with and without syringomyelia using 4D magnetic resonance (MR) phase contrast (PC) flow imaging.},
+  langid = {english},
+  file = {/Users/Heni/Zotero/storage/L8EN5D4R/Bunck et al. - 2012 - Magnetic resonance 4D flow analysis of cerebrospin.pdf}
+}
+
 @online{CineCardiacMRI,
   title = {Cine Cardiac {{MRI}}},
   url = {http://mriquestions.com/beating-heart-movies.html},
@@ -125,6 +143,26 @@
   file = {/Users/Heni/Zotero/storage/YPR2H6RI/B9780128192955000044.html}
 }
 
+@article{harrisVolumetricCineMagnetic2020,
+  title = {Volumetric Cine Magnetic Resonance Imaging ({{VC}}-{{MRI}}) Using Motion Modeling, Free-Form Deformation and Multi-Slice Undersampled {{2D}} Cine {{MRI}} Reconstructed with Spatio-Temporal Low-Rank Decomposition},
+  author = {Harris, Wendy and Yin, Fang-Fang and Cai, Jing and Ren, Lei},
+  date = {2020-02},
+  journaltitle = {Quantitative Imaging in Medicine and Surgery},
+  shortjournal = {Quant Imaging Med Surg},
+  volume = {10},
+  number = {2},
+  eprint = {32190569},
+  eprinttype = {pmid},
+  pages = {432--450},
+  issn = {2223-4292},
+  doi = {10.21037/qims.2019.12.10},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7063294/},
+  urldate = {2021-08-18},
+  abstract = {Background The purpose of this study is to improve on-board volumetric cine magnetic resonance imaging (VC-MRI) using multi-slice undersampled cine images reconstructed using spatio-temporal k-space data, patient prior 4D-MRI, motion modeling (MM) and free-form deformation (FD) for real-time 3D target verification of liver and lung radiotherapy. Methods A previous method was developed to generate on-board VC-MRI by deforming prior MRI images based on a MM and a single-slice on-board 2D-cine image. The two major improvements over the previous method are: (I) FD was introduced to estimate VC-MRI to correct for inaccuracies in the MM; (II) multi-slice undersampled 2D-cine images reconstructed by a k-t SLR reconstruction method were used for FD-based estimation to maintain the temporal resolution while improving the accuracy of VC-MRI. The method was evaluated using XCAT lung simulation and four liver patients’ data. Results For XCAT, VC-MRI estimated using ten undersampled sagittal 2D-cine MRIs resulted in volume percent difference/volume dice coefficient/center-of-mass shift of 9.77\%±3.71\%/0.95±0.02/0.75±0.26 mm among all scenarios based on estimation with MM and FD. Adding FD optimization improved VC-MRI accuracy substantially for scenarios with anatomical changes. For patient data, the mean tumor tracking errors were 0.64±0.51, 0.62±0.47 and 0.24±0.24 mm along the superior-inferior (SI), anterior-posterior (AP) and lateral directions, respectively, across all liver patients. Conclusions It is feasible to improve VC-MRI accuracy while maintaining high temporal resolution using FD and multi-slice undersampled 2D cine images for real-time 3D target verification.},
+  pmcid = {PMC7063294},
+  file = {/Users/Heni/Zotero/storage/CD4J9D87/Harris et al. - 2020 - Volumetric cine magnetic resonance imaging (VC-MRI.pdf}
+}
+
 @article{heckelSketchBasedEditingTools2013,
   title = {Sketch-{{Based Editing Tools}} for {{Tumour Segmentation}} in {{3D Medical Images}}},
   author = {Heckel, Frank and Moltz, Jan H. and Tietjen, Christian and Hahn, Horst K.},
@@ -141,6 +179,47 @@
   keywords = {3D,and object representations,Computer Graphics I.3.5: Computational Geometry and Object ModellingCurve,Computer Graphics I.3.6: Methodology and TechniquesInteraction techniques,contours,correction,CT,editing,Image Processing and Computer Vision I.4.6: Segmentation,interaction,segmentation,sketching,solid,surface},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/cgf.12193},
   file = {/Users/Heni/Zotero/storage/68SFS57G/Heckel et al. - 2013 - Sketch-Based Editing Tools for Tumour Segmentation.pdf;/Users/Heni/Zotero/storage/EVQGPP9X/cgf.html}
+}
+
+@article{helmbergerRadiologistsLeadingPosition2013,
+  title = {Radiologists’ Leading Position in Image-Guided Therapy},
+  author = {Helmberger, Thomas and Martí-Bonmatí, Luis and Pereira, Philippe and Gillams, Alice and Martínez, Jose and Lammer, Johannes and Malagari, Katarina and Gangi, Afshin and de Baere, Thierry and Adam, E. Jane and Rasch, Coen and Budach, Volker and Reekers, Jim A.},
+  options = {useprefix=true},
+  date = {2013-01-17},
+  journaltitle = {Insights into Imaging},
+  shortjournal = {Insights Imaging},
+  volume = {4},
+  number = {1},
+  eprint = {23325609},
+  eprinttype = {pmid},
+  pages = {1--7},
+  issn = {1869-4101},
+  doi = {10.1007/s13244-012-0213-9},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3579996/},
+  urldate = {2021-08-22},
+  abstract = {Image-guided diagnostic and therapeutic procedures are related to, or performed under, some kind of imaging. Such imaging may be direct inspection (as in open surgery) or indirect inspection as in endoscopy or laparoscopy. Common to all these techniques is the transformation of optical and visible information to a monitor or the eye of the operator. Image-guided therapy (IGT) differs by using processed imaging data acquired before, during and after a wide range of different imaging techniques. This means that the planning, performing and monitoring, as well as the control of the therapeutic procedure, are based and dependent on the “virtual reality” provided by imaging investigations. Since most of such imaging involves radiology in the broadest sense, there is a need to characterise IGT in more detail. In this paper, the technical, medico-legal and medico-political issues will be discussed. The focus will be put on state-of-the-art imaging, technical developments, methodological and legal requisites concerning radiation protection and licensing, speciality-specific limitations and crossing specialty borders, definition of technical and quality standards, and finally to the issue of awareness of IGT within the medical and public community. The specialty-specific knowledge should confer radiologists with a significant role in the overall responsibility for the imaging-related processes in various non-radiological specialties. These processes may encompass purchase, servicing, quality management, radiation protection and documentation, also taking responsibility for the definition and compliance with the legal requirements regarding all radiological imaging performed by non-radiologists.},
+  pmcid = {PMC3579996},
+  file = {/Users/Heni/Zotero/storage/6GKAKRY2/Helmberger et al. - 2013 - Radiologists’ leading position in image-guided the.pdf}
+}
+
+@article{jagsiRespiratoryMotionHeart2007b,
+  title = {Respiratory {{Motion}} of the {{Heart}} and {{Positional Reproducibility Under Active Breathing Control}}},
+  author = {Jagsi, Reshma and Moran, Jean M. and Kessler, Marc L. and Marsh, Robin B. and Balter, James M. and Pierce, Lori J.},
+  date = {2007-05-01},
+  journaltitle = {International journal of radiation oncology, biology, physics},
+  shortjournal = {Int J Radiat Oncol Biol Phys},
+  volume = {68},
+  number = {1},
+  eprint = {17448878},
+  eprinttype = {pmid},
+  pages = {253--258},
+  issn = {0360-3016},
+  doi = {10.1016/j.ijrobp.2006.12.058},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1865529/},
+  urldate = {2021-08-18},
+  abstract = {Purpose To reduce cardiotoxicity from breast radiotherapy (RT), innovative techniques are under investigation. Information about cardiac motion with respiration and positional reproducibility under active breathing control (ABC) is necessary to evaluate these techniques. Methods Patients requiring loco-regional RT for breast cancer were CT-scanned using an ABC device at various breath-hold states, before and during treatment. Ten patients were studied. For each patient, 12 datasets were analyzed. Mutual information-based regional rigid alignment was used to determine the magnitude and reproducibility of cardiac motion as a function of breathing state. For each scan session, motion was quantified by evaluating the displacement of a point along the left anterior descending artery (LAD) with respect to its position at end expiration. Long-term positional reproducibility was also assessed. Results Displacement of the LAD was greatest in the inferior direction, moderate in the anterior direction, and lowest in the left-right direction. At shallow breathing states, the average displacement of LAD position was up to 6mm in the inferior direction. The maximum displacement in any patient was 2.8cm in the inferior direction, between expiration and deep-inspiration breath hold (DIBH). At end expiration, the long-term reproducibility (SD) of the LAD position was 3mm in the A-P, 6mm in the S-I, and 4mm in the L-R directions. At DIBH, long-term reproducibility was 3mm in the A-P, 7mm in the S-I, and 3mm in the L-R directions. Conclusions These data demonstrate the extent of LAD displacement that occurs with shallow breathing and with DIBH. This information may guide optimization studies considering the effects of respiratory motion and reproducibility of cardiac position on cardiac dose, both with and without ABC.},
+  pmcid = {PMC1865529},
+  file = {/Users/Heni/Zotero/storage/U9EP3CNB/Jagsi et al. - 2007 - Respiratory Motion of the Heart and Positional Rep.pdf}
 }
 
 @article{johnson2DMultislice3D1999,
@@ -193,6 +272,25 @@
   file = {/Users/Heni/Zotero/storage/VE7RB5A9/Keenan et al. - 2008 - Comparison of 2D and multislab 3D magnetic resonan.pdf;/Users/Heni/Zotero/storage/HX6ETX4T/jmri.html}
 }
 
+@article{keiperFeasibilityRealtimeMotion2020,
+  title = {Feasibility of Real-Time Motion Tracking Using Cine {{MRI}} during {{MR}}-Guided Radiation Therapy for Abdominal Targets},
+  author = {Keiper, Timothy D. and Tai, An and Chen, Xinfeng and Paulson, Eric and Lathuilière, Fabienne and Bériault, Silvain and Hébert, François and Cooper, David T. and Lachaine, Martin and Li, X. Allen},
+  date = {2020},
+  journaltitle = {Medical Physics},
+  volume = {47},
+  number = {8},
+  pages = {3554--3566},
+  issn = {2473-4209},
+  doi = {10.1002/mp.14230},
+  url = {https://aapm.onlinelibrary.wiley.com/doi/abs/10.1002/mp.14230},
+  urldate = {2021-08-18},
+  abstract = {Purpose Real-time high soft-tissue contrast magnetic resonance imaging (MRI) from the MR-Linac offers the best opportunity for accurate motion tracking during radiation therapy delivery via high-frequency two-dimensional (2D) cine imaging. This work investigates the efficacy of real-time organ motion tracking based on the registration of MRI acquired on MR-Linac. Methods Algorithms based on image intensity were developed to determine the three-dimensional (3D) translation of abdominal targets. 2D and 3D abdominal MRIs were acquired for 10 healthy volunteers using a high-field MR-Linac. For each volunteer, 3D respiration-gated T2 and 2D T2/T1-weighted cine in sagittal, coronal, and axial planes with a planar temporal resolution of 0.6 for 60 s was captured. Datasets were also collected on MR-compatible physical and virtual four-dimensional (4D) motion phantoms. Target contours for the liver and pancreas from the 3D T2 were populated to the cine and assumed as the ground-truth motion. We performed image registration using a research software to track the target 3D motion. Standard deviations of the error (SDE) between the ground-truth and tracking were analyzed. Results Algorithms using a research software were demonstrated to be capable of tracking arbitrary targets in the abdomen at 5 Hz with an overall accuracy of 0.6 mm in phantom studies and 2.1 mm in volunteers. However, this value is subject to patient-specific considerations, namely motion amplitude. Calculation times of {$<$} 50 ms provide a pathway of real-time motion tracking integration. A major challenge in using 2D cine MRI to track the target is handling the full 3D motion of the target. Conclusions Feasibility to track organ motion using intensity-based registration of MRIs was demonstrated for abdominal targets. Tracking accuracy of about 2 mm was achieved for the motion of the liver and pancreatic head for typical patient motion. Further development is ongoing to improve the tracking algorithm for large and complex motions.},
+  langid = {english},
+  keywords = {abdominal organ motion,motion tracking with cine MRI,MRI-guided radiation therapy},
+  annotation = {\_eprint: https://aapm.onlinelibrary.wiley.com/doi/pdf/10.1002/mp.14230},
+  file = {/Users/Heni/Zotero/storage/C2WH6B4N/Keiper et al. - 2020 - Feasibility of real-time motion tracking using cin.pdf;/Users/Heni/Zotero/storage/X3CTZEIT/mp.html}
+}
+
 @article{kerkmeijerMRILinearAcceleratorConsortium2016,
   title = {The {{MRI}}-{{Linear Accelerator Consortium}}: {{Evidence}}-{{Based Clinical Introduction}} of an {{Innovation}} in {{Radiation Oncology Connecting Researchers}}, {{Methodology}}, {{Data Collection}}, {{Quality Assurance}}, and {{Technical Development}}},
   shorttitle = {The {{MRI}}-{{Linear Accelerator Consortium}}},
@@ -234,6 +332,24 @@
   file = {/Users/Heni/Zotero/storage/25LSLRBR/Kohli et al. - 2017 - Medical Image Data and Datasets in the Era of Mach.pdf}
 }
 
+@inproceedings{liaoIterativelyRefinedInteractive3D2020,
+  title = {Iteratively-{{Refined Interactive 3D Medical Image Segmentation With Multi}}-{{Agent Reinforcement Learning}}},
+  booktitle = {2020 {{IEEE}}/{{CVF Conference}} on {{Computer Vision}} and {{Pattern Recognition}} ({{CVPR}})},
+  author = {Liao, Xuan and Li, Wenhao and Xu, Qisen and Wang, Xiangfeng and Jin, Bo and Zhang, Xiaoyun and Wang, Yanfeng and Zhang, Ya},
+  date = {2020-06},
+  pages = {9391--9399},
+  publisher = {{IEEE}},
+  location = {{Seattle, WA, USA}},
+  doi = {10.1109/CVPR42600.2020.00941},
+  url = {https://ieeexplore.ieee.org/document/9157356/},
+  urldate = {2021-08-22},
+  abstract = {Existing automatic 3D image segmentation methods usually fail to meet the clinic use. Many studies have explored an interactive strategy to improve the image segmentation performance by iteratively incorporating user hints. However, the dynamic process for successive interactions is largely ignored. We here propose to model the dynamic process of iterative interactive image segmentation as a Markov decision process (MDP) and solve it with reinforcement learning (RL). Unfortunately, it is intractable to use single-agent RL for voxel-wise prediction due to the large exploration space. To reduce the exploration space to a tractable size, we treat each voxel as an agent with a shared voxel-level behavior strategy so that it can be solved with multi-agent reinforcement learning. An additional advantage of this multi-agent model is to capture the dependency among voxels for segmentation task. Meanwhile, to enrich the information of previous segmentations, we reserve the prediction uncertainty in the state space of MDP and derive an adjustment action space leading to a more precise and finer segmentation. In addition, to improve the efficiency of exploration, we design a relative cross-entropy gain-based reward to update the policy in a constrained direction. Experimental results on various medical datasets have shown that our method significantly outperforms existing state-ofthe-art methods, with the advantage of fewer interactions and a faster convergence.},
+  eventtitle = {2020 {{IEEE}}/{{CVF Conference}} on {{Computer Vision}} and {{Pattern Recognition}} ({{CVPR}})},
+  isbn = {978-1-72817-168-5},
+  langid = {english},
+  file = {/Users/Heni/Zotero/storage/Q95K25YN/Liao_Iteratively-Refined_Interactive_3D_Medical_Image_Segmentation_With_Multi-Agent_Reinforcement_Learning_CVPR_2020_paper.pdf}
+}
+
 @book{lineyMRIRadiotherapyPlanning2019,
   title = {{{MRI}} for {{Radiotherapy}}: {{Planning}}, {{Delivery}}, and {{Response Assessment}}},
   shorttitle = {{{MRI}} for {{Radiotherapy}}},
@@ -245,7 +361,7 @@
   doi = {10.1007/978-3-030-14442-5},
   url = {http://link.springer.com/10.1007/978-3-030-14442-5},
   urldate = {2021-08-04},
-  isbn = {978-3-030-14441-8 978-3-030-14442-5},
+  isbn = {978-3-030-14441-8},
   langid = {english},
   file = {/Users/Heni/Zotero/storage/NVFXZM69/Liney und van der Heide - 2019 - MRI for Radiotherapy Planning, Delivery, and Resp.pdf}
 }
@@ -255,6 +371,81 @@
   url = {https://www.nibib.nih.gov/science-education/science-topics/magnetic-resonance-imaging-mri},
   urldate = {2021-08-10},
   file = {/Users/Heni/Zotero/storage/SRHYCPA3/magnetic-resonance-imaging-mri.html}
+}
+
+@article{mickeviciusSimultaneousOrthogonalPlane2017,
+  title = {Simultaneous Orthogonal Plane Imaging},
+  author = {Mickevicius, Nikolai J. and Paulson, Eric S.},
+  date = {2017-11},
+  journaltitle = {Magnetic Resonance in Medicine},
+  shortjournal = {Magn Reson Med},
+  volume = {78},
+  number = {5},
+  eprint = {27917527},
+  eprinttype = {pmid},
+  pages = {1700--1710},
+  issn = {1522-2594},
+  doi = {10.1002/mrm.26555},
+  abstract = {PURPOSE: Intrafraction motion can result in a smearing of planned external beam radiation therapy dose distributions, resulting in an uncertainty in dose actually deposited in tissue. The purpose of this paper is to present a pulse sequence that is capable of imaging a moving target at a high frame rate in two orthogonal planes simultaneously for MR-guided radiotherapy. THEORY: By balancing the zero gradient moment on all axes, slices in two orthogonal planes may be spatially encoded simultaneously. The orthogonal slice groups may be acquired with equal or nonequal echo times. METHODS: A Cartesian spoiled gradient echo simultaneous orthogonal plane imaging (SOPI) sequence was tested in phantom and in vivo. Multiplexed SOPI acquisitions were performed in which two parallel slices were imaged along two orthogonal axes simultaneously. An autocalibrating phase-constrained 2D-SENSE-GRAPPA (generalized autocalibrating partially parallel acquisition) algorithm was implemented to reconstruct the multiplexed data. RESULTS: SOPI images without intraslice motion artifacts were reconstructed at a maximum frame rate of 8.16\,Hz. The 2D-SENSE-GRAPPA reconstruction separated the parallel slices aliased along each orthogonal axis. CONCLUSION: The high spatiotemporal resolution provided by SOPI has the potential to be beneficial for intrafraction motion management during MR-guided radiation therapy or other MRI-guided interventions. Magn Reson Med 78:1700-1710, 2017. © 2016 International Society for Magnetic Resonance in Medicine.},
+  langid = {english},
+  keywords = {Algorithms,Artifacts,Humans,Image Processing; Computer-Assisted,Magnetic Resonance Imaging,Motion,MR-guided radiation therapy,Phantoms; Imaging,Radiotherapy; Image-Guided,simultaneous multislice,simultaneous orthogonal slice,SMS,Torso}
+}
+
+@article{mickeviciusSimultaneousOrthogonalPlane2017a,
+  title = {Simultaneous Orthogonal Plane Imaging},
+  author = {Mickevicius, Nikolai J. and Paulson, Eric S.},
+  date = {2017},
+  journaltitle = {Magnetic Resonance in Medicine},
+  volume = {78},
+  number = {5},
+  pages = {1700--1710},
+  issn = {1522-2594},
+  doi = {10.1002/mrm.26555},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/mrm.26555},
+  urldate = {2021-08-22},
+  abstract = {Purpose Intrafraction motion can result in a smearing of planned external beam radiation therapy dose distributions, resulting in an uncertainty in dose actually deposited in tissue. The purpose of this paper is to present a pulse sequence that is capable of imaging a moving target at a high frame rate in two orthogonal planes simultaneously for MR-guided radiotherapy. Theory By balancing the zero gradient moment on all axes, slices in two orthogonal planes may be spatially encoded simultaneously. The orthogonal slice groups may be acquired with equal or nonequal echo times. Methods A Cartesian spoiled gradient echo simultaneous orthogonal plane imaging (SOPI) sequence was tested in phantom and in vivo. Multiplexed SOPI acquisitions were performed in which two parallel slices were imaged along two orthogonal axes simultaneously. An autocalibrating phase-constrained 2D-SENSE-GRAPPA (generalized autocalibrating partially parallel acquisition) algorithm was implemented to reconstruct the multiplexed data. Results SOPI images without intraslice motion artifacts were reconstructed at a maximum frame rate of 8.16 Hz. The 2D-SENSE-GRAPPA reconstruction separated the parallel slices aliased along each orthogonal axis. Conclusion The high spatiotemporal resolution provided by SOPI has the potential to be beneficial for intrafraction motion management during MR-guided radiation therapy or other MRI-guided interventions. Magn Reson Med 78:1700–1710, 2017. © 2016 International Society for Magnetic Resonance in Medicine.},
+  langid = {english},
+  keywords = {MR-guided radiation therapy,simultaneous multislice,simultaneous orthogonal slice,SMS},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/mrm.26555},
+  file = {/Users/Heni/Zotero/storage/VV7Z4878/mrm.html}
+}
+
+@article{OptimumStrategiesUsing,
+  title = {Optimum {{Strategies}} for {{Using Adobe Photoshop CS2}} in {{Scientific}} and {{Medical Imaging}}},
+  pages = {10},
+  langid = {english},
+  file = {/Users/Heni/Zotero/storage/ZFCNFU5W/Optimum Strategies for Using Adobe Photoshop CS2 i.pdf}
+}
+
+@online{postdicomTop25Free,
+  title = {Top 25 {{Free Dicom Viewers}} for {{Doctors}}, {{Medical Students}}, and {{Health Professionals}}},
+  author = {{postDICOM}},
+  url = {https://www.postdicom.com/en/blog/top-25-free-dicom-viewers},
+  urldate = {2021-08-22},
+  abstract = {DICOM (Digital Imaging and Communications in Medicine) is a standard format that enables medical professionals to view, store, and share medical images irrespective of their geographic location.},
+  langid = {english},
+  organization = {{postDICOM}},
+  file = {/Users/Heni/Zotero/storage/WXETI3NG/top-25-free-dicom-viewers.html}
+}
+
+@online{postdicomTop25Freea,
+  title = {Top 25 {{Free Dicom Viewers}} for {{Doctors}}, {{Medical Students}}, and {{Health Professionals}}},
+  author = {{postDICOM}},
+  url = {https://www.postdicom.com/en/blog/top-25-free-dicom-viewers},
+  urldate = {2021-08-23},
+  abstract = {DICOM (Digital Imaging and Communications in Medicine) is a standard format that enables medical professionals to view, store, and share medical images irrespective of their geographic location.},
+  langid = {english},
+  organization = {{postDICOM}},
+  file = {/Users/Heni/Zotero/storage/CJXZMTR8/top-25-free-dicom-viewers.html}
+}
+
+@online{PreiseUndAbos,
+  title = {Preise und Abos | Adobe Creative Cloud},
+  url = {https://www.adobe.com/de/creativecloud/plans.html},
+  urldate = {2021-08-23},
+  abstract = {Überblick über die Preise und Abo-Optionen für Adobe Creative Cloud: Zugriff auf alle Desktop-Programme von Adobe für Kreative, Cloud-Speicherplatz und Funktionen für den Austausch und die Synchronisation von Dateien.},
+  langid = {german},
+  file = {/Users/Heni/Zotero/storage/3K2IKNDD/plans.html}
 }
 
 @article{shihavuddinSmooth2DManifold2017,
@@ -280,6 +471,26 @@
   urldate = {2021-08-11}
 }
 
+@article{stankovic4DFlowImaging2014,
+  title = {{{4D}} Flow Imaging with {{MRI}}},
+  author = {Stankovic, Zoran and Allen, Bradley D. and Garcia, Julio and Jarvis, Kelly B. and Markl, Michael},
+  date = {2014-04},
+  journaltitle = {Cardiovascular Diagnosis and Therapy},
+  shortjournal = {Cardiovasc Diagn Ther},
+  volume = {4},
+  number = {2},
+  eprint = {24834414},
+  eprinttype = {pmid},
+  pages = {173--192},
+  issn = {2223-3652},
+  doi = {10.3978/j.issn.2223-3652.2014.01.02},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3996243/},
+  urldate = {2021-08-18},
+  abstract = {Magnetic resonance imaging (MRI) has become an important tool for the clinical evaluation of patients with cardiovascular disease. Since its introduction in the late 1980s, 2-dimensional phase contrast MRI (2D PC-MRI) has become a routine part of standard-of-care cardiac MRI for the assessment of regional blood flow in the heart and great vessels. More recently, time-resolved PC-MRI with velocity encoding along all three flow directions and three-dimensional (3D) anatomic coverage (also termed ‘4D flow MRI’) has been developed and applied for the evaluation of cardiovascular hemodynamics in multiple regions of the human body. 4D flow MRI allows for the comprehensive evaluation of complex blood flow patterns by 3D blood flow visualization and flexible retrospective quantification of flow parameters. Recent technical developments, including the utilization of advanced parallel imaging techniques such as k-t GRAPPA, have resulted in reasonable overall scan times, e.g., 8-12 minutes for 4D flow MRI of the aorta and 10-20 minutes for whole heart coverage. As a result, the application of 4D flow MRI in a clinical setting has become more feasible, as documented by an increased number of recent reports on the utility of the technique for the assessment of cardiac and vascular hemodynamics in patient studies. A number of studies have demonstrated the potential of 4D flow MRI to provide an improved assessment of hemodynamics which might aid in the diagnosis and therapeutic management of cardiovascular diseases. The purpose of this review is to describe the methods used for 4D flow MRI acquisition, post-processing and data analysis. In addition, the article provides an overview of the clinical applications of 4D flow MRI and includes a review of applications in the heart, thoracic aorta and hepatic system.},
+  pmcid = {PMC3996243},
+  file = {/Users/Heni/Zotero/storage/6U27RVTZ/Stankovic et al. - 2014 - 4D flow imaging with MRI.pdf}
+}
+
 @book{stoyanovImageAnalysisMoving2018,
   title = {Image {{Analysis}} for {{Moving Organ}}, {{Breast}}, and {{Thoracic Images}}: {{Third International Workshop}}, {{RAMBO}} 2018, {{Fourth International Workshop}}, {{BIA}} 2018, and {{First International Workshop}}, {{TIA}} 2018, {{Held}} in {{Conjunction}} with {{MICCAI}} 2018, {{Granada}}, {{Spain}}, {{September}} 16 and 20, 2018, {{Proceedings}}},
   shorttitle = {Image {{Analysis}} for {{Moving Organ}}, {{Breast}}, and {{Thoracic Images}}},
@@ -295,6 +506,15 @@
   isbn = {978-3-030-00945-8 978-3-030-00946-5},
   langid = {english},
   file = {/Users/Heni/Zotero/storage/XR5D74CH/Stoyanov et al. - 2018 - Image Analysis for Moving Organ, Breast, and Thora.pdf}
+}
+
+@online{TechniqueGeneratingVolumetric,
+  title = {A {{Technique}} for {{Generating Volumetric Cine}}-{{Magnetic Resonance Imaging}} | {{Elsevier Enhanced Reader}}},
+  doi = {10.1016/j.ijrobp.2016.02.011},
+  url = {https://reader.elsevier.com/reader/sd/pii/S0360301616001255?token=0322326445D62D758EF765065B980972DA6B7FF1DADC859EE9D0E9F3FBEF390ACBBF14DF447F3A2AC60E20061154BA98&originRegion=eu-west-1&originCreation=20210818133123},
+  urldate = {2021-08-18},
+  langid = {english},
+  file = {/Users/Heni/Zotero/storage/T9P6QR6J/A Technique for Generating Volumetric Cine-Magneti.pdf;/Users/Heni/Zotero/storage/UPYSJEH8/S0360301616001255.html}
 }
 
 @article{vangeunsBasicPrinciplesMagnetic1999,
@@ -314,7 +534,7 @@
   urldate = {2021-08-10},
   abstract = {Magnetic resonance imaging (MRI) is a noninvasive imaging technique that is becoming more and more important in clinical cardiology. Physicians must understand the basic principles of MRI before reliable use in practice is possible. Therefore, we will give an introduction to basic MRI principles necessary to understand the difficulties of cardiac MRI. First the generation of a signal by the combination of a strong magnetic field, radiofrequency pulses, and temporary changes in the magnetic field is explained. Then, the processes of localization of different points in an image, resolution, and signal-to-noise ratio are highlighted. Finally, the influence of tissue characteristics such as T1 and T2 on the contrast of an image are discussed. Copyright © 1999 by W.B. Saunders Company Progress in Cardiovascular Diseases, Vol. 42, No. 2 (September/October), 1999: pp 149-156},
   langid = {english},
-  file = {/Users/Heni/Zotero/storage/VRHKFXJB/van Geuns et al. - 1999 - Basic principles of magnetic resonance imaging.pdf;/Users/Heni/Zotero/storage/RKBDV2MY/S0033062099700149.html}
+  file = {/Users/Heni/Zotero/storage/JB68Q8XD/van Geuns et al. - 1999 - Basic principles of magnetic resonance imaging.pdf;/Users/Heni/Zotero/storage/VRHKFXJB/van Geuns et al. - 1999 - Basic principles of magnetic resonance imaging.pdf;/Users/Heni/Zotero/storage/RKBDV2MY/S0033062099700149.html}
 }
 
 @article{varmaFreeDICOMBrowsers2008,
