drag and draw in multiple point selection mode added

--- a/LaTeX/Literature.bib
+++ b/LaTeX/Literature.bib
@@ -37,6 +37,26 @@
   file = {/Users/Heni/Zotero/storage/FXY95W8F/Biederer et al. - 2012 - MRI of the lung (23). Why … when … how.pdf;/Users/Heni/Zotero/storage/L9MKN75M/s13244-011-0146-8.html}
 }
 
+@article{brockAdaptiveRadiotherapyMoving2019,
+  title = {Adaptive {{Radiotherapy}}: {{Moving Into}} the {{Future}}},
+  shorttitle = {Adaptive {{Radiotherapy}}},
+  author = {Brock, Kristy K.},
+  date = {2019-07},
+  journaltitle = {Seminars in radiation oncology},
+  shortjournal = {Semin Radiat Oncol},
+  volume = {29},
+  number = {3},
+  eprint = {31027635},
+  eprinttype = {pmid},
+  pages = {181--184},
+  issn = {1053-4296},
+  doi = {10.1016/j.semradonc.2019.02.011},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7219982/},
+  urldate = {2021-08-30},
+  pmcid = {PMC7219982},
+  file = {/Users/Heni/Zotero/storage/WPEQK9SX/Brock - 2019 - Adaptive Radiotherapy Moving Into the Future.pdf}
+}
+
 @article{bunckMagneticResonance4D2012a,
   title = {Magnetic Resonance {{4D}} Flow Analysis of Cerebrospinal Fluid Dynamics in {{Chiari I}} Malformation with and without Syringomyelia},
   author = {Bunck, Alexander C. and Kroeger, Jan Robert and Juettner, Alena and Brentrup, Angela and Fiedler, Barbara and Crelier, Gerard R. and Martin, Bryn A. and Heindel, Walter and Maintz, David and Schwindt, Wolfram and Niederstadt, Thomas},
@@ -83,6 +103,17 @@
   file = {/Users/Heni/Zotero/storage/3E76WSJR/Clunie - 2021 - DICOM Format and Protocol Standardization—A Core R.pdf}
 }
 
+@online{DefinitionRadiotherapyNCI2011,
+  type = {nciAppModulePage},
+  title = {Definition of Radiotherapy - {{NCI Dictionary}} of {{Cancer Terms}} - {{National Cancer Institute}}},
+  year = {02/02/2011 - 07:00},
+  url = {https://www.cancer.gov/publications/dictionaries/cancer-terms/def/radiotherapy},
+  urldate = {2021-08-30},
+  abstract = {NCI's Dictionary of Cancer Terms provides easy-to-understand definitions for words and phrases related to cancer and medicine., The use of high-energy radiation from x-rays, gamma rays, neutrons, protons, and other sources to kill cancer cells and shrink tumors. Radiation may come from a machine outside the body (external-beam radiation therapy), or it may come from radioactive material placed in the body near cancer cells (internal radiation therapy or brachytherapy).},
+  langid = {english},
+  file = {/Users/Heni/Zotero/storage/NAMMYI7T/radiotherapy.html}
+}
+
 @online{ElsevierEnhancedReader,
   title = {Elsevier {{Enhanced Reader}}},
   doi = {10.1016/j.crad.2005.07.003},
@@ -107,6 +138,36 @@
   isbn = {978-3-030-78709-7 978-3-030-78710-3},
   langid = {english},
   file = {/Users/Heni/Zotero/storage/28CBQDGV/Ennis et al. - 2021 - Functional Imaging and Modeling of the Heart 11th.pdf}
+}
+
+@online{FastRobustOnline,
+  title = {Fast and Robust Online Adaptive Planning in Stereotactic {{MR}}-Guided Adaptive Radiation Therapy ({{SMART}}) for Pancreatic Cancer | {{Elsevier Enhanced Reader}}},
+  doi = {10.1016/j.radonc.2017.07.028},
+  url = {https://reader.elsevier.com/reader/sd/pii/S0167814017324982?token=9B3B779DA24463E51418423CDB2A754275D6DF69706881E3C396DF416408E2A7F24006C2AFC1222A3561A729ABAEEAF3&originRegion=eu-west-1&originCreation=20210826114129},
+  urldate = {2021-08-26},
+  langid = {english},
+  file = {/Users/Heni/Zotero/storage/WKKKQKLF/Fast and robust online adaptive planning in stereo.pdf;/Users/Heni/Zotero/storage/SZMMEE5L/S0167814017324982.html}
+}
+
+@article{gianfaldoniOverviewRadiotherapyIts2017,
+  title = {An {{Overview}} on {{Radiotherapy}}: {{From Its History}} to {{Its Current Applications}} in {{Dermatology}}},
+  shorttitle = {An {{Overview}} on {{Radiotherapy}}},
+  author = {Gianfaldoni, Serena and Gianfaldoni, Roberto and Wollina, Uwe and Lotti, Jacopo and Tchernev, Georgi and Lotti, Torello},
+  date = {2017-07-18},
+  journaltitle = {Open Access Macedonian Journal of Medical Sciences},
+  shortjournal = {Open Access Maced J Med Sci},
+  volume = {5},
+  number = {4},
+  eprint = {28785349},
+  eprinttype = {pmid},
+  pages = {521--525},
+  issn = {1857-9655},
+  doi = {10.3889/oamjms.2017.122},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5535674/},
+  urldate = {2021-08-30},
+  abstract = {For more than a century, radiotherapy has been an effective treatment for oncologic patients. The Authors report a brief history of the radiation therapy and its actual indication for the treatments of cutaneous malignant diseases.},
+  pmcid = {PMC5535674},
+  file = {/Users/Heni/Zotero/storage/Y9KSJ9JM/Gianfaldoni et al. - 2017 - An Overview on Radiotherapy From Its History to I.pdf}
 }
 
 @book{gollmer3DBildsegmentierungMittelsStatistischer2015,
@@ -330,6 +391,24 @@
   abstract = {At the first annual Conference on Machine Intelligence in Medical Imaging (C-MIMI), held in September 2016, a conference session on medical image data and datasets for machine learning identified multiple issues. The common theme from attendees was that everyone participating in medical image evaluation with machine learning is data starved. There is an urgent need to find better ways to collect, annotate, and reuse medical imaging data. Unique domain issues with medical image datasets require further study, development, and dissemination of best practices and standards, and a coordinated effort among medical imaging domain experts, medical imaging informaticists, government and industry data scientists, and interested commercial, academic, and government entities. High-level attributes of reusable medical image datasets suitable to train, test, validate, verify, and regulate ML products should be better described. NIH and other government agencies should promote and, where applicable, enforce, access to medical image datasets. We should improve communication among medical imaging domain experts, medical imaging informaticists, academic clinical and basic science researchers, government and industry data scientists, and interested commercial entities.},
   pmcid = {PMC5537092},
   file = {/Users/Heni/Zotero/storage/25LSLRBR/Kohli et al. - 2017 - Medical Image Data and Datasets in the Era of Mach.pdf}
+}
+
+@article{liAminopeptidaseActivatableFluorescent2020,
+  title = {Aminopeptidase {{N Activatable Fluorescent Probe}} for {{Tracking Metastatic Cancer}} and {{Image}}-{{Guided Surgery}} via in {{Situ Spraying}}},
+  author = {Li, Haidong and Yao, Qichao and Sun, Wen and Shao, Kun and Lu, Yang and Chung, Jeewon and Kim, Dayeh and Fan, Jiangli and Long, Saran and Du, Jianjun and Li, Yueqing and Wang, Jingyun and Yoon, Juyoung and Peng, Xiaojun},
+  date = {2020-04-01},
+  journaltitle = {Journal of the American Chemical Society},
+  shortjournal = {J. Am. Chem. Soc.},
+  volume = {142},
+  number = {13},
+  pages = {6381--6389},
+  publisher = {{American Chemical Society}},
+  issn = {0002-7863},
+  doi = {10.1021/jacs.0c01365},
+  url = {https://doi.org/10.1021/jacs.0c01365},
+  urldate = {2021-08-30},
+  abstract = {The recurrence of malignant tumors is mostly caused by incompleted surgical resection. Especially, it is difficult for surgeons to detect and accurately remove metastatic tumors by predominantly using visual examination and palpation owing to the lack of effective means to specifically distinguish the boundary range between normal and tumor tissues. Thus, the development of activated fluorescent probe with superior tumor-to-normal (T/N) tissue ratios is particularly urgent in clinics. In view of CD13/aminopeptidase N (APN) regarded as a cancer-specific biomarker, mediating with progression, invasion, and migration of malignant tumor, herein, we reported an APN-responsive fluorescent probe YH-APN and demonstrated its application to distinguish cancer cells. Through in situ spraying manner, fluorescent superior tumor-to-normal (T/N) tissue ratios (subcutaneous transplantation tumor, 13.86; hepatic metastasis, 4.42 and 6.25; splenic metastasis, 4.99) were achieved. More importantly, we have demonstrated the ability to image metastasis tumor tissue less than 1 mm in diameter, highlighting the potential for this probe to be used as a tool in surgical resection. This research may spur the use of enzyme-activatable fluorescent probes for the progress of tumor diagnosis and image-guided surgery (IGS).},
+  file = {/Users/Heni/Zotero/storage/Q2CFFAW2/Li et al. - 2020 - Aminopeptidase N Activatable Fluorescent Probe for.pdf;/Users/Heni/Zotero/storage/W3WNVQ4G/jacs.html}
 }
 
 @inproceedings{liaoIterativelyRefinedInteractive3D2020,
@@ -575,6 +654,27 @@
   abstract = {All modalities in radiology practice have become digital, and therefore deal with DICOM images. Image files that are compliant with part 10 of the DICOM standard are generally referred to as “DICOM format files” or simply “DICOM files” and are represented as “.dcm.” DICOM differs from other image formats in that it groups information into data sets. A DICOM file consists of a header and image data sets packed into a single file. The information within the header is organized as a constant and standardized series of tags. By extracting data from these tags one can access important information regarding the patient demographics, study parameters, etc. In the interest of patient confidentiality, all information that can be used to identify the patient should be removed before DICOM images are transmitted over a network for educational or other purposes. In addition to the DICOM format, the radiologist routinely encounters images of several file formats such as JPEG, TIFF, GIF, and PNG. Each format has its own unique advantages and disadvantages, which must be taken into consideration when images are archived, used in teaching files, or submitted for publication. Knowledge about these formats and their attributes, such as image resolution, image compression, and image metadata, helps the radiologist in optimizing the archival, organization, and display of images. This article aims to increase the awareness among radiologists regarding DICOM and other image file formats encountered in clinical practice. It also suggests several tips and tricks that can be used by the radiologist so that the digital potential of these images can be fully utilized for maximization of workflow in the radiology practice.},
   pmcid = {PMC3354356},
   file = {/Users/Heni/Zotero/storage/CTHYEE2H/Varma - 2012 - Managing DICOM images Tips and tricks for the rad.pdf}
+}
+
+@article{weiNoninvasiveStereotacticRadioablation2019,
+  title = {Non-Invasive {{Stereotactic Radioablation}}: {{A New Option}} for the {{Treatment}} of {{Ventricular Arrhythmias}}},
+  shorttitle = {Non-Invasive {{Stereotactic Radioablation}}},
+  author = {Wei, Chen and Qian, Pierre and Tedrow, Usha and Mak, Raymond and Zei, Paul C},
+  date = {2019-12},
+  journaltitle = {Arrhythmia \& Electrophysiology Review},
+  shortjournal = {Arrhythm Electrophysiol Rev},
+  volume = {8},
+  number = {4},
+  eprint = {32685159},
+  eprinttype = {pmid},
+  pages = {285--293},
+  issn = {2050-3369},
+  doi = {10.15420/aer.2019.04},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7358955/},
+  urldate = {2021-08-30},
+  abstract = {Ventricular tachycardia (VT) is associated with significant morbidity and mortality. Radiofrequency catheter ablation can be effective for the treatment of VT but it carries a high rate of recurrence often attributable to insufficient depth of penetration for reaching critical arrhythmogenic substrates. Stereotactic body radioablation (SBRT) is a commonly used technology developed for the non-invasive treatment of solid tumours. Recent evidence suggests that it can also be effective for the treatment of VT. It is a non-invasive procedure and it has the unique advantage of delivering ablative energy to any desired volume within the body to reach sites that are inaccessible with catheter ablation. This article summarises the pre-clinical studies that have formed the evidence base for SBRT in the heart, describes the clinical approaches for SBRT VT ablation and provides perspective on next steps for this new treatment modality.},
+  pmcid = {PMC7358955},
+  file = {/Users/Heni/Zotero/storage/IRK7TWDW/Wei et al. - 2019 - Non-invasive Stereotactic Radioablation A New Opt.pdf}
 }
 
 
